--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     </div>
   </template>
 
+  <script src="js/lodash.js"></script>
   <script src="leaflet/leaflet.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
